--- a/index.html
+++ b/index.html
@@ -73,9 +73,15 @@ body {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
 }
+#updatetext{
+  background:#e30000;
+  color:#dbbc0d;
+}
+
 </style>
 </head>
 <body>
+  <p align="center" id="updatetext">The Time table will be updated if it was changed</p>
 
 <div class="sidenav">
   <button class="dropdown-btn">Attend Classes
@@ -156,7 +162,7 @@ div.WordSection1
 }
 </style>
 
-<h1 align="center">Time table</h1>
+<h1 align="center" id="heading-time-table">Time table</h1>
 <div class="hhh">
 
 <div class=WordSection1>
