--- a/index.html
+++ b/index.html
@@ -225,8 +225,12 @@ div.WordSection1
 #timetbl{
   padding-right: 250px;
 }
+#ram{
+  padding-right: 450px;
+}
 </style>
 <img src="timetable.JFIF" width="1000" align="right" id="timetbl">
+<img src="ramtime.jpeg" with="200" align="right" id="ram">
 
 </div>
 </div>
