--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@ div.WordSection1
   padding-right: 450px;
 }
 </style>
-<img src="timetable.JFIF" width="1000" align="right" id="timetbl">
+<img src="timetable.png" width="1000" align="right" id="timetbl">
 <img src="ramtime.jpeg" with="200" align="right" id="ram">
 
 </div>
