--- a/index.html
+++ b/index.html
@@ -229,8 +229,8 @@ div.WordSection1
   padding-right: 450px;
 }
 </style>
-<img src="timetable.png" width="1000" align="right" id="timetbl">
-<img src="ramtime.jpeg" with="200" align="right" id="ram">
+<img src="timetable.jpg" width="1000" align="right" id="timetbl">
+<img src="ramtime.jpg" with="200" align="right" id="ram">
 
 </div>
 </div>
