--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ function checkTime(i) {
   <p align="center" id="updatetext" style="display:inline block;">The Time table will be updated if it was changed</p>
 
 <div class="sidenav">
-  <button class="dropdown-btn">Attend Classes
+  <!--<button class="dropdown-btn">Attend Classes
     <i class="fa fa-caret-down"></i>
   </button>
   <div class="dropdown-container">
@@ -149,6 +149,7 @@ function checkTime(i) {
       <a href="https://zoom.us/j/5294724657">Psychology</a>
       <a href="https://zoom.us/j/3581440190">P.S</a>
   </div>
+
   <button class="dropdown-btn">Google-Classroom
     <i class="fa fa-caret-down"></i>
   </button>
@@ -159,16 +160,12 @@ function checkTime(i) {
       <a href="https://classroom.google.com/u/2/c/NjY4NDY0MDEyNTRa">P.E</a>
       <a href="https://classroom.google.com/u/2/c/NjczOTM3MzUxNTNa">Sociology</a>
   </div>
-
+-->
   <button class="dropdown-btn">Up-coming-test
     <i class="fa fa-caret-down"></i>
   </button>
   <div class="dropdown-container">
-      <a href="#https://classroom.google.com/u/2/c/Njc1ODg3NzkxNTda">Pol-Sci-4th May</a>
-      <a href="#https://classroom.google.com/u/2/c/NjQwNTA3NjI1NzBa">Socio-5th May</a>
-      <a href="#https://classroom.google.com/u/2/c/Njc0NDEzNDgzMTNa">Eng-11th May</a>
-      <a href="#https://classroom.google.com/u/2/c/NjY4NDY0MDEyNTRa">Psy-12thMay</a>
-      <a href="#https://classroom.google.com/u/2/c/NjczOTM3MzUxNTNa">PE- 13th May</a>
+      <a href="#https://classroom.google.com/u/2/c/Njc1ODg3NzkxNTda">English-ASL Wed</a>
   </div>
 </div>
 
